fixed event handler bug

--- a/playground/index.htm
+++ b/playground/index.htm
@@ -32,73 +32,6 @@
 	</head>
 	
 	<body>
-		<script type="text/javascript">
-			// BOX TEST
-			var box = new epic.box( {
-				width: 300,
-				height: 200,
-				caption: "Hello!",
-				target: document.body,
-				singleview: true
-			} );
-
-			// BUTTON
-			var button = new epic.button( {
-				classes: "epic-box-btn",
-				style: epic.button.style.primary,
-				icon: new epic.icon( {
-					name: "fa-times",
-					classes: "fa"
-				})
-			} );
-
-			box.controls.insertBefore( button.container, null );
-
-			// COPYCAT ENGINE TEST
-//			var default_settings = {
-//				attributes: {
-//					name: "a",
-//					active: true
-//				}
-//			};
-//
-//			var settings = {
-//				
-//			};
-//			
-//			var x = epic.object.copy( default_settings, null );
-//			
-//			console.clear();
-//			console.log( JSON.stringify( default_settings ) );
-//			console.log( JSON.stringify( settings ) );
-//			console.log(default_settings.settings == settings.attributes);
-			
-			// COLLECTION TEST
-//			var collection = new epic.collection();
-//			collection.set_event_handler( function( event, value ) {
-//				epic.notify( {
-//					title: event,
-//					message: "Something happened."
-//				});
-//			} );
-
-			// VIEWPORT TEST
-//			var viewport = new epic.viewport();
-//			var element = viewport.container;
-//			viewport.add_view().append("hello!").activate();
-//			document.body.insertBefore( element, null );
-			
-//			var x = epic.html(element);
-//			x.empty().append("boom!");
-
-//			epic.notify( {
-//				title: "Hello ^_^",
-//				message: "Can you see me? :P"
-//			});
-//
-//			epic.notify.success( "We made it! ^_^ " );
-//			epic.notify.warning( "Be careful!" );
-//			epic.notify.danger( "RUN!!!" );
-		</script>
+		<script src="resources/test.js"></script>
 	</body>
 </html>
